force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <fullName>Audit_Log__c</fullName>
    <label>Audit Log</label>
    <pluralLabel>Audit Logs</pluralLabel>
    <nameField>
        <label>Audit Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>AL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>