force-app/main/default/objects/Audit_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Info</fullName><label>Info</label><default>true</default></value>
            <value><fullName>Warning</fullName><label>Warning</label><default>false</default></value>
            <value><fullName>Critical</fullName><label>Critical</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>